fix: the bug that texts are in wrong color in text field
make the input in text field to be black

--- a/client/src/main/resources/CSS/GameScreen.css
+++ b/client/src/main/resources/CSS/GameScreen.css
@@ -57,3 +57,12 @@
     -fx-background-color: transparent;
     -fx-border-width: 0;
 }
+.stack-pane .label{
+    -fx-text-fill: white;
+}
+.stack-pane .text-field{
+    -fx-text-fill: black;
+}
+.text-field {
+    -fx-text-fill: white;
+}
